// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basics.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<GlimmerComponent @progress={{aPropertyEngdingAfterEightiethColumnToHighlightAWeirdClosingParenIssue}}
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aLongProperty (and this.aProperty (v-get bike "number" "message"))}}
  data-test-beneficiary-account-number
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aVeryLongProperty (and this.aProperty (v-get bike "number" "message"))}}
  data-test-beneficiary-account-number
/>

<div class="a long list of classes more than 80 chars with a complex mustache statement {{if (or this.a this.b) this.c this.d}}">
</div>

<div class="a multi line list of classes with a complex mustache statement
           {{if (or this.a this.b) this.c this.d}}">
</div>

<div class="a-first-class {{if this.optionOne "optionOne"}} {{if this.optionTwo "optionTwo"}} {{if this.optionThree "optionThree"}} {{if this.optionFour "optionFour"}} {{if this.optionFive "optionFive"}} {{this.class}}" ...attributes >
</div>

<div
  class="a-first-class
    {{if this.optionOne "optionOne"}}
    
    {{if this.optionTwo "optionTwo"}}
    
    {{if this.optionThree "optionThree"}}
    
    {{if this.optionFour "optionFour"}}
    
    {{if this.optionFive "optionFive"}}
    
    {{this.class}}"
  ...attributes >
</div>

=====================================output=====================================
<GlimmerComponent
  @progress={{
    aPropertyEngdingAfterEightiethColumnToHighlightAWeirdClosingParenIssue
  }}
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{
    or this.aLongProperty (and this.aProperty (v-get bike "number" "message"))
  }}
  data-test-beneficiary-account-number
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{
    or
    this.aVeryLongProperty
    (and this.aProperty (v-get bike "number" "message"))
  }}
  data-test-beneficiary-account-number
/>

<div
  class="a long list of classes more than 80 chars with a complex mustache statement {{
    if (or this.a this.b) this.c this.d
  }}"
>
</div>

<div
  class="a multi line list of classes with a complex mustache statement
  {{if (or this.a this.b) this.c this.d}}"
>
</div>

<div
  class="a-first-class {{if this.optionOne "optionOne"}} {{
    if this.optionTwo "optionTwo"
  }} {{if this.optionThree "optionThree"}} {{
    if this.optionFour "optionFour"
  }} {{if this.optionFive "optionFive"}} {{this.class}}"
  ...attributes
>
</div>

<div
  class="a-first-class
  {{if this.optionOne "optionOne"}}

   {{if this.optionTwo "optionTwo"}}

   {{if this.optionThree "optionThree"}}

   {{if this.optionFour "optionFour"}}

   {{if this.optionFive "optionFive"}}

   {{this.class}}"
  ...attributes
>
</div>
================================================================================
`;

exports[`basics.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<GlimmerComponent @progress={{aPropertyEngdingAfterEightiethColumnToHighlightAWeirdClosingParenIssue}}
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aLongProperty (and this.aProperty (v-get bike "number" "message"))}}
  data-test-beneficiary-account-number
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aVeryLongProperty (and this.aProperty (v-get bike "number" "message"))}}
  data-test-beneficiary-account-number
/>

<div class="a long list of classes more than 80 chars with a complex mustache statement {{if (or this.a this.b) this.c this.d}}">
</div>

<div class="a multi line list of classes with a complex mustache statement
           {{if (or this.a this.b) this.c this.d}}">
</div>

<div class="a-first-class {{if this.optionOne "optionOne"}} {{if this.optionTwo "optionTwo"}} {{if this.optionThree "optionThree"}} {{if this.optionFour "optionFour"}} {{if this.optionFive "optionFive"}} {{this.class}}" ...attributes >
</div>

<div
  class="a-first-class
    {{if this.optionOne "optionOne"}}
    
    {{if this.optionTwo "optionTwo"}}
    
    {{if this.optionThree "optionThree"}}
    
    {{if this.optionFour "optionFour"}}
    
    {{if this.optionFive "optionFive"}}
    
    {{this.class}}"
  ...attributes >
</div>

=====================================output=====================================
<GlimmerComponent
  @progress={{
    aPropertyEngdingAfterEightiethColumnToHighlightAWeirdClosingParenIssue
  }}
/>

<GlimmerComponent
  class='medium'
  @autocomplete='off'
  @errors={{
    or this.aLongProperty (and this.aProperty (v-get bike 'number' 'message'))
  }}
  data-test-beneficiary-account-number
/>

<GlimmerComponent
  class='medium'
  @autocomplete='off'
  @errors={{
    or
    this.aVeryLongProperty
    (and this.aProperty (v-get bike 'number' 'message'))
  }}
  data-test-beneficiary-account-number
/>

<div
  class="a long list of classes more than 80 chars with a complex mustache statement {{
    if (or this.a this.b) this.c this.d
  }}"
>
</div>

<div
  class="a multi line list of classes with a complex mustache statement
  {{if (or this.a this.b) this.c this.d}}"
>
</div>

<div
  class="a-first-class {{if this.optionOne 'optionOne'}} {{
    if this.optionTwo 'optionTwo'
  }} {{if this.optionThree 'optionThree'}} {{
    if this.optionFour 'optionFour'
  }} {{if this.optionFive 'optionFive'}} {{this.class}}"
  ...attributes
>
</div>

<div
  class="a-first-class
  {{if this.optionOne 'optionOne'}}

   {{if this.optionTwo 'optionTwo'}}

   {{if this.optionThree 'optionThree'}}

   {{if this.optionFour 'optionFour'}}

   {{if this.optionFive 'optionFive'}}

   {{this.class}}"
  ...attributes
>
</div>
================================================================================
`;

exports[`element-modifier-statement.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>

<div {{hello param param param param param param param param param param param param}}>
  Hello
</div>

<div {{hello hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

<div {{hello param param param param hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

=====================================output=====================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>

<div
  {{hello
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
  }}
>
  Hello
</div>

<div
  {{hello
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>

<div
  {{hello
    param
    param
    param
    param
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>
================================================================================
`;

exports[`element-modifier-statement.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>

<div {{hello param param param param param param param param param param param param}}>
  Hello
</div>

<div {{hello hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

<div {{hello param param param param hashPair=value hashPair=value hashPair=value hashPair=value hashPair=value}}>
  Hello
</div>

=====================================output=====================================
<div {{hello param hash=key}} {{goodbye param}}>
  Hello
</div>

<div
  {{hello
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
    param
  }}
>
  Hello
</div>

<div
  {{hello
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>

<div
  {{hello
    param
    param
    param
    param
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
    hashPair=value
  }}
>
  Hello
</div>
================================================================================
`;
